# oracle

./: .gitignore  Makefile  README.md  README.rst  bot.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
.github/workflows/: build.yml
bot/: .env  __main__.py  config.py  sample.env
bot/db/: schema.py  sqlite.db
bot/plugins/: keyboard.py  messages.py
magialyq/: __main__.py  main.py
magialyq/api/: config.py  random.py
magialyq/db/: database.db
magialyq/script/: engine.py
magialyq/utils/: db.py  generate.py
magipy/: config.py
magipy/api/: random.py
magipy/db/: schema.py
magipy/utils/: generate.py
tests/: test_config.py  test_db.py  test_keyboard.py  test_magialyq.py  test_magipy.py  test_main.py
