[tool.poetry]
name = "magialyq"
version = "0.1.0"
description = ""
authors = ["notabu <samyyklass@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdoclient = "^1.4.1"
pyTelegramBotAPI = "^3.8.1"
telebot = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
magialyq = "magialyq.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
