[tool.poetry]
name = "magipy"
version = "0.1.0"
description = ""
authors = ["znhv <znhv@yandex.com"]

[tool.poetry.dependencies]
python = "^3.9"
rdoclient = "^1.4.1"
pyTelegramBotAPI = "^3.8.1"
telebot = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bot = "bot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
