[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["znhv <znhv@yandex.com>"]

packages = [
  { include = "bot" },
]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^3.8.1"
python-dotenv = "^0.19.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bot = "bot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
